deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app  # This must match the labels inside `template.metadata.labels`
  template:
    metadata:
      labels:
        app: my-app  # Must match `selector.matchLabels`
    spec:
      containers:
      - name: my-app
        image: 235494789903.dkr.ecr.ap-south-1.amazonaws.com/my-app:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app  # Matches the label of pods created by Deployment
  type: LoadBalancer  # Creates an external Load Balancer
  ports:
    - protocol: TCP
      port: 80         # External Port
      targetPort: 80   # Container Port
